kubernetes/namespaces/cert-manager/manifests/pihole.yaml
---
# Service ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  labels:
    app: pihole
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/issuer: pihole-certificate-issuer
spec:
  tls:
    - secretName:  pihole-certificate-secret
      hosts:
        - pihole.[AZR_DOMAIN]
  rules:
    - host: pihole.[AZR_DOMAIN]
      http:
        paths:
          - pathType: Prefix 
            path: /
            backend:
              service:
                name: pihole-service-tcp
                port:
                  number: 8053
