kubernetes/namespaces/cert-manager/manifests/plex.yaml
---
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: media-services
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: plex-service
  labels:
    app: plex
spec:
  selector: {}
  ports:
    - protocol: TCP
      port: 32400
---
# Service Endpoint
apiVersion: v1
kind: Endpoints
metadata:
  name: plex-service # Must have the same name as the service
  labels:
    app: plex
subsets:
  - addresses:
      - ip: '' # Modify
    ports:
      - protocol: TCP
        port: 32400
---
# Service ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  labels:
    app: plex
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/issuer: plex-certificate-issuer
spec:
  tls:
    - secretName:  plex-certificate-secret
      hosts:
        - plex.[AZR_DOMAIN]
  rules:
    - host: plex.[AZR_DOMAIN]
      http:
        paths:
          - pathType: Prefix 
            path: /
            backend:
              service:
                name: plex-service
                port:
                  number: 32400
