kubernetes/namespaces/cert-manager/manifests/portainer.yaml
---
# Service ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-ingress
  namespace: portainer
  labels:
    app: portainer
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/issuer: portainer-certificate-issuer
spec:
  tls:
    - secretName:  portainer-certificate-secret
      hosts:
        - portainer.[AZR_DOMAIN]
  rules:
    - host: portainer.[AZR_DOMAIN]
      http:
        paths:
          - pathType: Prefix 
            path: /
            backend:
              service:
                name: portainer-service-tcp
                port:
                  number: 9000
